# sql_agent

./: 01_builder.ipynb  01_sql_agent.ipynb  README.md  pyproject.toml  requirements.txt
